added API for adding an external User
