# docs/users-and-roles-swagger.yaml
@@ -150,6 +150,28 @@ paths:
         responses: {}
         httpMethod: POST
         type: aws_proxy
+  /external-users:
+    post:
+      summary: Adds new external user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ExternalUser'
+      responses:
+        '200':
+          description: Successful creation of external user. Returns the credentials for the generated user
+          content:
+            "application/json":
+              schema:
+                $ref: '#/components/schemas/ExternalUserCredentials'
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${CreateExternalUserClientHandler.Arn}/invocations
+        responses: {}
+        httpMethod: POST
+        type: aws_proxy
   /institutions/users:
     get:
       summary: Lists users of specified institution
@@ -161,7 +183,7 @@ paths:
           required: true
       responses:
         '200':
-          description: List of users belonging in the specified institue
+          description: List of users belonging in the specified institute
           content:
             application/json:
               schema:
@@ -213,6 +235,22 @@ components:
             $ref: '#/components/schemas/AccessRight'
         viewingScope:
           $ref: '#/components/schemas/ViewingScope'
+    ExternalUser:
+      properties:
+        clientName:
+          type: string
+          description: Name of the OAuth client for the external user
+    ExternalUserCredentials:
+      properties:
+        clientId:
+          type: string
+          description: Client ID used for authentication
+        clientSecret:
+          type: string
+          description: Client Secret used for authentication
+        clientUrl:
+          type: string
+          description: URL for generating tokens
     ViewingScope:
       properties:
         includedUnits:
